# resume-backend

./: .gitignore  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy.yaml
src/: index.py
tests/: test_unit.py
