[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sahil kulkarni <sahilkatwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.24.75"
moto = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
